[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = "0.6.1"
rand = "0.8.5"

# Console Debug
colored = { version = "2.0", optional = true }

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.8", optional = true }
